# django-better-migrations

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
django_better_migrations/: __init__.py  config.py  migration_writer_patch.py  rules.py
docs/: README.md  configuration.md  contributing.md  faq.md  installation.md
docs/features/: check_rules_to_protect_against_dangerous_actions.md  define_the_db_engines_allowed_to_generate_migrations.md  display_generated_sql.md
scripts/: release
tests/: __init__.py  assertions.py  helpers.py  settings.py  test_app.py  test_dummy.py  test_rules.py
tests/integration/: test_makemigrations_adds_sql.py
tests/snapshots/: migrations__0001_django_gte_41.py  migrations__0001_initial.py
